* fixed grouping row now being left aligned

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,5 +62,10 @@
         width: 1px;
       }
     }
+    &.group {
+      td {
+        text-align: left;
+      }
+    }
   }
 }
